cmake_minimum_required(VERSION 3.26)
project(C___Programing)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___Programing
        BDS/1darray.cpp
        BDS/aanchal.cpp
        BDS/Exp1a.cpp
        BDS/exp3.cpp
        BDS/fact.cpp
        BDS/gcd.cpp
        BDS/recursionnn.cpp
        BDS/stack.cpp
        BDS/uwu.cpp
        BDS/uwu2.cpp
        "Chalo M1 Hai/Arrays.cpp"
        "Chalo M1 Hai/test.c"
        "PPS/Assignment TIll M1/C003_P1.cpp"
        "PPS/Assignment TIll M1/C003_P10.cpp"
        "PPS/Assignment TIll M1/C003_P11.cpp"
        "PPS/Assignment TIll M1/C003_P12.cpp"
        "PPS/Assignment TIll M1/C003_P13.cpp"
        "PPS/Assignment TIll M1/C003_P14.cpp"
        "PPS/Assignment TIll M1/C003_P15.cpp"
        "PPS/Assignment TIll M1/C003_P16.cpp"
        "PPS/Assignment TIll M1/C003_P19.cpp"
        "PPS/Assignment TIll M1/C003_P2.cpp"
        "PPS/Assignment TIll M1/C003_P20.cpp"
        "PPS/Assignment TIll M1/C003_P3.cpp"
        "PPS/Assignment TIll M1/C003_P4.cpp"
        "PPS/Assignment TIll M1/C003_P5.cpp"
        "PPS/Assignment TIll M1/C003_P6.cpp"
        "PPS/Assignment TIll M1/C003_P7.cpp"
        "PPS/Assignment TIll M1/C003_P8.cpp"
        "PPS/Assignment TIll M1/C003_P9.cpp"
        "PPS/Assignment TIll M1/C03_P21.cpp"
        "PPS/Assignment TIll M1/prime.cpp"
        "PPS/C003 Experiment 4/Q1.cpp"
        "PPS/C003 Experiment 4/Q10.cpp"
        "PPS/C003 Experiment 4/Q11.cpp"
        "PPS/C003 Experiment 4/Q12.cpp"
        "PPS/C003 Experiment 4/Q2.cpp"
        "PPS/C003 Experiment 4/Q3.cpp"
        "PPS/C003 Experiment 4/Q4.cpp"
        "PPS/C003 Experiment 4/Q5.cpp"
        "PPS/C003 Experiment 4/Q6.cpp"
        "PPS/C003 Experiment 4/Q7.cpp"
        "PPS/C003 Experiment 4/Q8.cpp"
        "PPS/C003 Experiment 4/Q9.cpp"
        "PPS/C003 Experiment 6/q1.cpp"
        "PPS/C003 Experiment 6/q2.cpp"
        "PPS/C003 Experiment 6/q3.cpp"
        "PPS/C003 Experiment 6/q4.cpp"
        "PPS/C003 Experiment 6/q5.cpp"
        "PPS/C003 Experiment 6/q6.cpp"
        "PPS/C003 Experiment 6/q7.cpp"
        "PPS/C003 Experiment 6/q8.cpp"
        PPS/experiment1.cpp
        PPS/lastfirst.cpp
        PPS/learning.cpp
        PPS/test.cpp
        PPS/uperlower.cpp)
